# parameter-importance

./: .gitattributes  .gitignore  Readme.md  pyproject.toml
Agents/: 工作日志与多端同步规范.md
docs/: mathematics.md  parameter_importance_u_statistic_report.md
environment/: LOCKING.md  base-requirements.in  linux-only-requirements.in  local-dev-requirements.in  requirements.in  windows-cpu-wheel-manifest.tsv
ops/: __init__.py  local_contracts.py
plan/: NLP参数重要性完整实验计划书.md  general_plan.md  run_ready_stage4_9.md
policies/: storage-lifecycle.json
reports/: local-validation-stage0-9-v04.json  local-validation-stage0-9-v04.md
schemas/: stage0-asset-manifest-v1.json
scripts/: compare_batch_viewer.py  lab_build_wheelhouse.ps1  lab_cache_assets.py  lab_finish_cufile.ps1  lab_finish_linux_runtime.ps1  lab_finish_wheelhouse.ps1  lab_hf_broker.ps1  lab_prepare_assets.ps1  lab_prepare_pile_prefix.ps1  lab_supervise_pile.ps1  lock_from_pip_report.py  nccl_smoke.py  server_finalize.sh  server_install_assets.sh  server_install_cufile.sh  server_install_linux_runtime.sh  server_install_wheelhouse.sh  server_validate_core.sh  server_xet_download.sh  verify_asset_manifest.py  verify_offline_assets.py  verify_pile_prefix.py
tests/: test_ablation_training_runner.py  test_analysis_metrics_report.py  test_analysis_pipeline.py  test_artifact_schemas_and_loaders.py  test_assets.py  test_atomic_storage.py  test_cli.py  test_cli_declarative_builders_v04.py  test_cli_task_lifecycle_v04.py  test_cli_v03.py  test_contracts_config.py  test_contracts_gate_freeze.py  test_contracts_identity_seed.py  test_contracts_json.py  test_core_estimators_and_accumulator.py  test_core_metrics_and_pruning.py  test_core_oracles.py  test_core_quadrature.py  test_core_registry_and_loss.py  test_environment.py  test_environment_rebuild.py  test_experiments_ablation_runner.py  test_experiments_pruning_ablation.py  test_experiments_pruning_runner.py  test_experiments_sampling_stage2.py  test_experiments_stage3_routes.py  test_experiments_training_routes_runner.py  test_formal_preflight_evidence.py  test_full_fixture_pipeline.py  test_git_guard.py  test_lifecycle_capacity.py  test_local_contracts.py  test_local_fixture.py  test_optional_dependencies.py  test_providers_fixed_state_torch.py  test_providers_huggingface_offline.py  test_providers_training_prefetch.py  test_run_ready_config_examples.py  test_runtime_core.py  test_runtime_distributed.py  (+19 more)
worklogs/: 2026-07-13-repository-cleanup-and-sync-policy.md  2026-07-13-server-environment-preparation.md  README.md  (+11 more)
(+578 files in other folders)
